--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = "1.0"
 pythonize = "0.27"
-tokio-memq = "0.2.1"
+tokio_memq_crate = { package = "tokio-memq", version = "0.2.1" }
